3.0.161.alpha.1 - 20th October 2023
- The 'Set map opacity' option will now be locked out if ElvUI is installed with the maps module enabled.

3.0.160 - 19th October 2023
- Updates for game version 3.4.3.
- Fixed two issues with 'Set map opacity' (opacity not applied on login and opacity incorrectly applied to maximised map).
- Fixed two issues with 'Use default map' (maximised map was movable and possibly non-interactive on login).
- For 'Use default map', the smaller map frame will no longer align with other system frames.

3.0.159 - 16th October 2023
- Updates for game version 3.4.3.

3.0.158 - 14th October 2023
- Added new option 'Show objectives'.  If enabled, quest objectives will be shown on the map.  It's enabled by default.
- The 'Remove map border' option has been removed.
- The 'Show coordinates' option no longer requires a UI reload once again.
- Removed 3.4.3 transitional code.

3.0.157 - 12th October 2023
- The world map frame is now sized as it was prior to game patch 3.4.3.  After installing this update, the map will appear larger at first.  You can resize it by enabling 'Unlock map frame' or you can click the 'Reset map layout' button in the Leatrix Maps panel.  The size change does not apply if 'Use default map' is enabled.
- You can no longer disable 'Remove map border'.  It's now always enabled.  This does not apply if 'Use default map' is enabled.

3.0.156 - 12th October 2023
- Updates for game version 3.4.3.
- If 'Unlock map frame' is enabled, you can drag the map by any of its borders once again.  You can always drag the map by the top border regardless of this setting.

3.0.155 - 12th October 2023
- Updates for game version 3.4.3.
- The 'Use default map' option is now available once again.
- Adjusted the scaling of points of interest icons (does not apply if 'Use default map' is enabled).

3.0.154 - 11th October 2023
- The 'Remove map border' option is now available once again.
- You can move the map by dragging the top border.